# THDSample

./: CMakeLists.txt  DHT_ERROR_HANDLING.md  PHASE2_BUILD_GUIDE.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_STATUS.md  README.md  WIFI_PHASE1_COMPLETE.md  partitions.csv  sdkconfig.defaults
components/DHTReader/: CMakeLists.txt  DHTReader.c
components/DHTReader/include/: DHTReader.h
components/app/app_coordinator/: CMakeLists.txt  app_coordinator.c
components/app/app_nvs/: CMakeLists.txt  app_nvs.c
components/app/app_nvs/include/: app_nvs.h
components/app/app_wifi/: CMakeLists.txt  app_wifi.c
components/app/dns_server/: CMakeLists.txt  dns_server.c
components/app/http_server/: CMakeLists.txt  http_server.c
components/app/http_server/include/: http_server.h
components/app/humidity_indicator/: CMakeLists.txt  humidity_indicator.c
components/app/ota_update/: CMakeLists.txt  ota_update.c
components/app/sntp_client/: CMakeLists.txt  sntp_client.c
components/dht_reader/: CMakeLists.txt  Kconfig  dht_reader.c  idf_component.yml
components/dht_reader/include/: dht_reader.h
components/interactors/sample_interactor/: CMakeLists.txt  idf_component.yml  sample_interactor.c
components/led_controller/: CMakeLists.txt  Kconfig  led_controller.c
components/led_controller/include/: led_controller.h
components/libs/dht_reader/: CMakeLists.txt  dht_reader.c
components/libs/led_controller/: CMakeLists.txt  idf_component.yml  led_controller.c
components/services/led_controller/: led_controller.c
main/: CMakeLists.txt  main.c
main/webpage/: app.js
(+13 files in other folders)
